Fix the alignment.

--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ header {
 }
 
 .intro-chunk {
-  padding: 0 64px;
+  padding: 0 32px;
 }
 
 .title {
